<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/admin_fragment_change_email"
    android:background="#f5f5f5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="50dp">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_above="@+id/cardview_logout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/admin_setting_all_user"
                        android:layout_width="match_parent"

                        android:layout_height="70dp"
                        android:background="?android:attr/selectableItemBackground"


                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_mode_edit_black_24dp">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="Zarządzanie klientem"

                            >

                        </TextView>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">


                        </Space>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_chevron_right_black"
                            android:tint="@android:color/darker_gray">

                        </ImageView>

                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_above="@+id/cardview_logout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/admin_change_mydata"
                        android:layout_width="match_parent"

                        android:layout_height="70dp"
                        android:background="?android:attr/selectableItemBackground"


                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_person_outline_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp">

                        </ImageView>

                        <TextView
                            android:id="@+id/admin_edit_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="Edycja profilu"

                            >

                        </TextView>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">


                        </Space>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_chevron_right_black"
                            android:tint="@android:color/darker_gray">

                        </ImageView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/admin_setting_change_mypassword"
                        android:layout_width="match_parent"

                        android:layout_height="70dp"
                        android:background="?android:attr/selectableItemBackground"


                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_lock_outline_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="Zmień hasło"

                            >

                        </TextView>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">


                        </Space>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_chevron_right_black"
                            android:tint="@android:color/darker_gray">

                        </ImageView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/admin_setting_change_myEmail"
                        android:layout_width="match_parent"

                        android:layout_height="70dp"
                        android:background="?android:attr/selectableItemBackground"


                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_mail_outline_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="Zmień e-mail"

                            >

                        </TextView>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">


                        </Space>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_chevron_right_black"
                            android:tint="@android:color/darker_gray">

                        </ImageView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/admin_setting_change_time"
                        android:layout_width="match_parent"

                        android:layout_height="70dp"
                        android:background="?android:attr/selectableItemBackground"


                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_access_time_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="Zmień czas dla zamówień"

                            >

                        </TextView>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">


                        </Space>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_chevron_right_black"
                            android:tint="@android:color/darker_gray">

                        </ImageView>

                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp">

                <Button
                    android:id="@+id/admin_logout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"

                    android:text="Wyloguj" />


            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>