<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_fragment_settings_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".SettingsChangeMyData">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/support_toolbar"
            layout="@layout/appbarlayout" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cardview_logout"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/cardview_shadow_start_color">

                    <EditText
                        android:id="@+id/myName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Imię"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZąęłóżźćśń"
                        android:maxLength="15"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/cardview_shadow_start_color">

                    <EditText
                        android:id="@+id/mySurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Nazwisko"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZąęłóżźćśń"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cardview_logout"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/cardview_shadow_start_color">

                    <EditText
                        android:id="@+id/myStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Ulica i nr mieszkania"
                        android:imeOptions="actionNext"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZąęłóżźćśń"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/cardview_shadow_start_color">

                    <EditText
                        android:id="@+id/myCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Miasto"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/cardview_shadow_start_color">

                    <EditText
                        android:id="@+id/myPostcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Kod pocztowy"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:digits="0123456789-"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/cardview_shadow_start_color">

                    <EditText
                        android:id="@+id/myPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Nr telefonu"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:maxLength="9"

                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cardview_change_mydata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/admin_setting_change_mydata_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:text="Zatwierdź zmiany" />


        </android.support.v7.widget.CardView>


    </LinearLayout>
</RelativeLayout>